tests/errors/delocal-wrong-type.ja
procedure main()
    local int x = 0
    skip
    delocal stack x = 0
